--- a/logging_config_debug.json
+++ b/logging_config_debug.json
@@ -13,6 +13,7 @@
         }
     },
     "root": {
-        "handlers": ["default", "console"]
+        "handlers": ["default", "console"],
+        "level": 10
     }
 }
